# git-workon

./: .gitignore  .gitmessage  Cargo.toml  Makefile  README.md  ROADMAP.md  STACKED_DIFFS_RESEARCH.md  TODO.md  build.rs  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
git-hooks/: commit-msg  install.sh  pre-push
git-workon/: Cargo.toml  build.rs
git-workon-fixture/: Cargo.toml
git-workon-fixture/src/: assert.rs  fixture.rs  fixture_builder.rs  lib.rs  predicates.rs  prelude.rs
git-workon-fixture/src/fixture/: branch.rs  reference.rs  repository.rs
git-workon-fixture/src/predicates/: branch_points_to.rs  has_branch.rs  has_config.rs  has_config_multivar.rs  has_remote.rs  has_remote_branch.rs  has_remote_url.rs  has_upstream.rs  has_worktree.rs  head_commit_message_contains.rs  head_commit_parent_count.rs  head_matches.rs  is_bare.rs  is_empty.rs  is_head_detached.rs  is_worktree.rs
git-workon-fixture/tests/: fixture_builder.rs
git-workon-lib/: Cargo.toml
git-workon-lib/src/: add_worktree.rs  clone.rs  config.rs  convert_to_bare.rs  copy.rs  default_branch.rs  empty_commit.rs  error.rs  get_remote_callbacks.rs  get_repo.rs  get_worktrees.rs  init.rs  lib.rs  move.rs  pr.rs  stacked_diffs.rs  workon_root.rs  worktree.rs
git-workon-lib/tests/: clone.rs  config.rs  init.rs  worktree.rs
git-workon/src/: cli.rs  cmd.rs  completers.rs  copy.rs  display.rs  hooks.rs  json.rs  main.rs  output.rs  shell_integration.rs
git-workon/src/cmd/: clone.rs  complete.rs  config.rs  copy_untracked.rs  doctor.rs  find.rs  init.rs  list.rs  move.rs  new.rs  prune.rs  shell_init.rs  switch.rs
git-workon/tests/: clone.rs  completions.rs  copy_untracked.rs  doctor.rs  find.rs  hooks.rs  init.rs  list.rs  move.rs  new.rs  pr.rs  prune.rs  shell_init.rs
src/: cli.rs  cmd.rs  main.rs  util.rs
src/cmd/: clone.rs  init.rs  prune.rs
src/util/: clone_bare_single_branch.rs  convert_to_bare.rs
tests/: init.rs
