[workspace]
resolver = "2"
default-members = ["git-workon"]
members = ["git-workon", "git-workon-lib", "git-workon-fixture"]

[workspace.package]
authors = ["Eric Eldredge <lettertwo@gmail.com>"]
edition = "2021"
homepage = "https://github.com/lettertwo/git-workon"
license = "MIT"
repository = "https://github.com/lettertwo/git-workon"
rust-version = "1.68.2"

[workspace.dependencies]
assert_cmd = { version = "2.1.2", features = ["color", "color-auto"] }
assert_fs = { version = "1.1.3", features = ["color", "color-auto"] }
clap = { version = "4.5.60", features = [
  "derive",
  "color",
  "wrap_help",
  "unicode",
  "env",
] }
clap-verbosity-flag = "3.0.4"
clap_complete = { version = "4.5.66", features = ["unstable-dynamic"] }
clap_mangen = "0.2.31"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
env_logger = "0.11.6"
git-workon-lib = { version = "0.1.0", path = "./git-workon-lib" }
git-workon-fixture = { version = "0.1.0", path = "./git-workon-fixture" }
git2_credentials = { version = "0.15.0", features = ["ui4dialoguer"] }
git2 = { version = "0.20.4", default-features = false, features = [
  "ssh",
  "https",
] }
glob = "0.3"
log = "0.4.29"
miette = { version = "7.6.0", features = ["fancy"] }
owo-colors = "4"
predicates = { version = "3.1.4" }
supports-color = "3"
serde_json = "1.0"
thiserror = "2.0.18"
